# folio

./: .augmentignore  .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  .windsurfrules  BEST-PRACTICES.md  CODE_REVIEW_COMMENTS.md  DOCKER.md  Dockerfile  Makefile  PR_MESSAGE.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test_data_source_logging.py  test_folib_logger.py  test_logging.py
.ai/prompts/: agent-identity.md  augment-memory-backup.md  cursor-system.md  planning.md  xu.md
.cursor/rules/: coding-guidelines.mdc  project-conventions.mdc  user-interactions.mdc
.github/: copilot-instructions.md
.github/workflows/: python-tests.yml
.refs/folib-planning/: -handoff2.md  -handoff3.md  domain-model-evaluation.md  domain-model-implementation.md  error-handling.md  focli-integration-plan.md  migration-plan.md
@docs/plans/: simulator-zero-pnl-fix.md
docs/: Poetry.md  ai-rules.md  cache-guide.md  code-review.md  coding-guidelines.md  focli-mvp-v2.md  logging.md  project-conventions.md  project-design.md  testing-guidelines.md
docs/best-practices/: cli-folib-separation.md  sign-handling-in-financial-calculations.md  simplifying-conditional-logic.md  testing-examples-ticker-service.md
docs/folib-planning/: -handoff.md  -index.md  -master-plan-v2.md  -next.md  -status.md  -task-master.md  -task-tracker.md  calculation-functions-prd.md  current-state.md  domain-model-implementation.md  domain-model-simplification.md  domain-model-summary.md  exposure-calculation-handoff.md  implementation-progress.md  implementation-status-and-plan.md  market-data-providers.md  master-plan-concise.md  master-plan.md  migration-plan.md  phase1-portfolio-loading-plan.md  portfolio-comparison-report.md
docs/plans/: cli-business-logic-issues.md  cli-option-type-display.md  cli-portfolio-summary-percent-column.md  data-model-refactoring-plan.md  dcf-calculator-design.md  disable-price-updates.md  fix-simulation-display-issues.md  folib_logger_refactoring.md  market-data-caching.md  options-calculation-improvements.md  poetry-migration-plan.md  position-command-improvements.md  position-group-simulation-analysis.md  position-simulation-implementation.md  price-update-refactor.md  refactor-market-data.md  refactor-portfolio-summary.md  revised-disable-price-updates.md  sim-v2-atomic-implementation-plan.md  sim-v2-test-plan.md  simulation-output-investigation.md  simulator-refactoring-plan.md  stock_data_service_caching.md  stock_data_service_design.md  stock_data_service_design_final.md  ticker-service-phase2.md  ticker-service-phase4.md  ticker-service-proposal.md
docs/retrospectives/: sign-handling-in-financial-calculations.md
docs/specs/: dcf-calc-cli.md  dcf-calc-web.md  dcf-calc.md  dcf-v2.md
docs/tasks/: ticker-service-tasks.md
scripts/: clean.sh  compare_exposures_ui.py  compare_portfolio_implementations.py  focli.py  install-git-hooks.sh  portfolio_e2e_test.py  run_mlflow.py  test_portfolio_loading.py
scripts/git-hooks/: pre-commit
src/: stockdata.py  yfinance.py
src/cli/: README.md  __init__.py  __main__.py  cli-SPEC.md  formatters.py  main.py  shell.py  state.py
src/cli/commands/: __init__.py  cache.py  portfolio.py  position.py  utils.py
src/focli/: README.md  SPEC.md  __init__.py  focli.py  formatters.py  shell.py  utils.py
src/focli/commands/: __init__.py  analyze.py  help.py  portfolio.py  position.py  sim.py  simulate.py
src/folib/: __init__.py  domain.py  logger.py
src/folib/calculations/: __init__.py  pnl.py  (+4 more)
src/folio/: __init__.py  ai_utils.py  app.py  calculations.py  cash_detection.py  data_model.py  exceptions.py  folio.yaml  gemini_client.py  logger.py  marketdata.py  options.py  pnl.py  portfolio.py  portfolio_value.py  position_analysis.py  security.py  simulator.py  simulator_v2.py  utils.py  validation.py
tests/: compare_option_categorization.py  compare_option_deltas.py  compare_option_exposures.py  compare_options.py  compare_options_fixed.py  compare_portfolio_implementations.py  conftest.py  test_ai_integration.py  test_allocations_chart.py  test_chart_colors.py  test_chart_config.py  test_chart_data.py  test_charts.py  test_data_model.py  test_data_model_serialization.py  test_option_exposure.py  test_options.py  test_portfolio_value.py  test_security.py  test_simulator_v2.py  test_simulator_v2_integration.py  test_summary_cards.py  test_validation.py
tests/assets/: test_portfolio.csv
tests/e2e/: conftest.py  test_cash_like_grouping.py  test_exposures.py  test_pending_activity.py  test_portfolio.py  test_portfolio_calculations.py  test_position_command.py
tests/folib/: __init__.py  test_domain.py  test_domain_to_dict.py
tests/test_data/: mock_stock_data.py
(+59 files in other folders)
